# netrainer

./: .gitignore  README.md
docs/: doc.md
src/: CMakeLists.txt  batch.cpp  batch.h  dataset.h  inputParser.h  layer.h  nn.cpp  nn.h  train.cpp
src/data/: batch.cpp  batch.h  dataset.cpp
src/label_gen/: cls_label_gen.cpp  cls_label_gen.h  label_gen.h
